# kepler-apertures

./: .flake8  .gitignore  404.html  README.md  do_lcs_fail.txt  eb_candidates_simbad.csv  ebs_need_conf.txt  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: flake8.yml
EXBAMachine/: index.html
KeplerFFI/: KeplerFFI.md  index.html
KeplerPRF/: KeplerPRF.md  index.html
docs/: CmputingPSFmodels.ipynb  EXBAMachine.md  Untitled.ipynb  create_PRF_tutorial.ipynb  exba_lcf_readme.ipynb  exoplanet_g304_fixed_dilution.ipynb  gaia_timeout.ipynb  index.md  periodics.ipynb  plot_PRF_wall.ipynb  tutorials.md  using_PRF_on_exba.ipynb
docs/.virtual_documents/: Untitled.ipynb.py
docs/tutorials/: using_PRF_on_exba.ipynb
kepler_apertures/: ApertureMachine.py  EXBAMachine.py  KeplerFFI.py  KeplerPRF.py  KeplerPSF.py  __init__.py  build_ffi_models.py  do_bls.py  do_bls_long.py  do_corrector.py  do_lcs.py  download_ffi.py  split_exba_obj.py  utils.py
res/: exba_tpfs_info.csv  ffi_prf_models_v0.1.fits
sandbox/: FFI_error.ipynb  build_ffi_models.py  check_FFI_source_catalogs.ipynb  creat_hlsp_dir_tree.ipynb  create_PRF_model_files.ipynb  create_hlsp.py  create_hlsp_v2.py  dr2_ids_test.txt  eb_candidates.csv  exoplanet_g304.ipynb  exoplanet_g304_free_dilution.ipynb  exoplanet_tutorial.ipynb  ffi_lcs.ipynb  lcf_as_hlsp.ipynb  lcf_as_hlsp_v2.ipynb  paper_plots.ipynb  split_corrected_lcs.ipynb
search/: search_index.json
src/kepler_apertures/: EXBAMachine.py  (+3 more)
tests/: test_kepler_apertures.py
tutorials/: create_PRF_tutorial.ipynb  index.html  using_PRF_on_exba.ipynb
(+10 files in other folders)
