[tool.poetry]
name = "kepler-apertures"
version = "0.1.0"
description = "Aperture mask estimation for Kepler sources"
license = "MIT"
authors = ["Jorge Martinez-Palomera <jorgemarpa@ug.uchile.cl>"]
homepage = "https://github.com/jorgemarpa/kepler-apertures"
repository = "https://github.com/jorgemarpa/kepler-apertures"
keywords = ["NASA, TESS, Astronomy"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
]

[tool.poetry.dependencies]
python = "^3.8"
astropy = "^4.2"
scipy = "^1.6.1"
matplotlib = "^3.3.4"
photutils = "^1.0.2"
pandas = "^1.2.3"
tqdm = "^4.59.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
